; ModuleID = '/home/carl/AnghaBench/tig/src/extr_map.c_string_map_iterate.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_map.c_string_map_iterate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_map_iterator = type { i32 (i32, i8*)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8*)* @string_map_iterate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_map_iterate(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.string_map_iterator*, align 8
  store i8** %0, i8*** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.string_map_iterator*
  store %struct.string_map_iterator* %7, %struct.string_map_iterator** %5, align 8
  %8 = load %struct.string_map_iterator*, %struct.string_map_iterator** %5, align 8
  %9 = getelementptr inbounds %struct.string_map_iterator, %struct.string_map_iterator* %8, i32 0, i32 0
  %10 = load i32 (i32, i8*)*, i32 (i32, i8*)** %9, align 8
  %11 = load %struct.string_map_iterator*, %struct.string_map_iterator** %5, align 8
  %12 = getelementptr inbounds %struct.string_map_iterator, %struct.string_map_iterator* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i8**, i8*** %3, align 8
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 %10(i32 %13, i8* %15)
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
